--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="button-name">
                     <button *ngIf="globalProjectName" class="no-print project-name-global" mat-raised-button
-                        style="position: relative; z-index: 9999999999; outline: none;">
+                        style="position: relative; z-index: 2; outline: none;">
                         {{title}}: {{ globalDisplayName ? globalDisplayName : globalProjectName }}
                     </button>
                 </div>
