--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -14,6 +14,13 @@
   </div>
 </ng-template>
 
-<ckeditor *ngIf="openSettings && bmxClientPageOverview" [editor]="Editor" id="txtTexto" class="ckeditorcev"
-  [config]="config" [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText">
+<ckeditor 
+  *ngIf="openSettings && bmxClientPageOverview" 
+  [editor]="Editor" 
+  id="txtTexto" 
+  class="ckeditorcev"
+  [config]="config" 
+  [(ngModel)]="bmxItem.componentText" 
+  [data]="bmxItem.componentText" 
+  [ngModelOptions]="{ updateOn: 'blur' }">
 </ckeditor>
