--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -287,3 +287,7 @@
 app-survey-creation-design {
   width: 100%;
 }
+
+::ng-deep .mat-tooltip {
+  z-index: 1000 !important; /* Ajusta el valor según tus necesidades */
+}
