--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -81,6 +81,15 @@
         left: 0px;
         animation: slideInDown 0.4s ease 0.6s backwards;
     }
+    .full-width {
+        width: 100%;
+    }
+    
+    mat-form-field {
+        display: block;
+        margin-bottom: 16px;
+    }
+    
 
     .finish-button {
         right: 0px;
@@ -145,6 +154,7 @@
         margin: 5px;
         border-radius: 10px;
     }
+    
 
     //desktop
     @media (min-width: 576px) {
@@ -159,12 +169,14 @@
         }
         .bsr-mobile-container {
             max-width: 400px;
-            position: relative;
+            position: absolute;
             min-height: 90%;
-            top: 30px;
+            top: 50%;
+            left: 50%;
             overflow-y: hidden;
             border: solid #020263;
             border-radius: 10px;
+            transform: translate(-50%, -50%);
         }
         .tab-emoji {
             max-width: 355px;
@@ -230,7 +242,7 @@
 
         .bsr-mobile-container {
             max-width: 500px;
-            position: relative;
+            position: absolute;
             min-height: 100%;
             overflow-y: hidden;
         }
