iphone version on the fix

--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -233,6 +233,7 @@
         .names-list-card {
             height: 260px;
             overflow-y: scroll;
+            min-width: 330px;
             line-height: 26px;
             border-bottom: #1e41ea solid 1px;
             opacity: 0;
